--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -1,18 +1,11 @@
 .backdrop {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99;
-
+  height: 100vh;
+  width: 100vw;
   background: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  top: 0;
+  transition: transform 250ms linear;
 
-  @media screen and (min-width: 480px) {
-    padding: 94px 15px;
-  }
   &.is-hidden {
     opacity: 0;
     visibility: hidden;
@@ -31,9 +24,14 @@
   padding: 20px 37px 20px 37px;
   border: none;
   position: absolute;
-  top: 80%;
   left: 50%;
+  bottom: 10%;
   transform: translate(-50%, -50%);
+  width: 160px;
+
+  @media screen and (min-width: 768px) {
+    width: 240px;
+  }
 }
 
 .btn-modal:hover,
@@ -55,7 +53,15 @@
   transform: translate(-50%, -50%);
   padding: 40px;
   width: 450px;
+
   z-index: 99999;
+
+  @media screen and (min-width: 768px) {
+    width: 528px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 608px;
+  }
 }
 
 .modal-form-field {
@@ -71,8 +77,8 @@
   background: none;
   border: none;
   position: absolute;
-  right: 5px;
-  top: 5px;
+  right: 10px;
+  top: 10px;
 }
 
 .close-icon {
@@ -167,6 +173,7 @@
 .check-lable {
   display: flex;
   align-items: center;
+  margin-bottom: 15px;
   &::before {
     content: '';
     width: 16px;
@@ -190,7 +197,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .ceckbox-text {
