Buttons in mobile menu

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,7 +1,17 @@
 <div class="menu-container is-hidden" data-menu>
   <button type="button" class="menu-button-close" data-menu-close>
-    <svg width="40" height="40">
+    <svg width="14" height="14">
       <use class="icon-cross" href="./images/sprite-con.svg#icon-close"></use>
     </svg>
   </button>
+  <button type="button" class="page-header_button mobile-buy-btn" data-modal-open>
+    <span class="button-word">Buy now</span>
+  </button>
+  <ul>
+    <li class="mob-menu__item"><a href="" class="current">Home</a></li>
+    <li class="mob-menu__item"><a href="">About us</a></li>
+    <li class="mob-menu__item"><a href="">How it’s made?</a></li>
+    <li class="mob-menu__item"><a href="">Our products</a></li>
+    <li class="mob-menu__item"><a href="">Contact</a></li>
+  </ul>
 </div>
