--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,27 +1,26 @@
 <header class="page-header">
-    <div class=" container ">
-        <div class="page-header_menu">
-            <a href="index.html" class="header-logo">
-                <h2 class="header-logo_title">icecream</h2>
-            </a>
-            <nav class="header-nav">
-                <ul class="header-nav_list">
-                    <li class="header-nav_item"> <a href="" class="header-nav_link link">Home</a> </li>
-                    <li class="header-nav_item"> <a href="" class="header-nav_link link">About us</a> </li>
-                    <li class="header-nav_item"> <a href="" class="header-nav_link link">How it’s made?</a>
-                    </li>
-                    <li class="header-nav_item"> <a href="" class="header-nav_link link">Our products</a> </li>
-                    <li class="header-nav_item"> <a href="" class="header-nav_link link">Contact</a> </li>
-                </ul>
-            </nav>
-            <div class="burger-button_wrap">
-                <button type="button" class="page-header_burger" data-menu-open></button>
-                <button type="button" class="page-header_button" data-modal-open> 
-                    <span class="button-word">Buy now</span>
-                </button>
-                <include src="./partials/mobile-menu.html"></include>
-            </div>
-        </div>
+  <div class="container">
+    <div class="page-header_menu">
+      <a href="index.html" class="header-logo">
+        <h2 class="header-logo_title">icecream</h2>
+      </a>
+      <nav class="header-nav">
+        <ul class="header-nav_list">
+          <li class="header-nav_item"><a href="" class="header-nav_link link current">Home</a></li>
+          <li class="header-nav_item"><a href="" class="header-nav_link link">About us</a></li>
+          <li class="header-nav_item">
+            <a href="" class="header-nav_link link">How it’s made?</a>
+          </li>
+          <li class="header-nav_item"><a href="" class="header-nav_link link">Our products</a></li>
+          <li class="header-nav_item"><a href="" class="header-nav_link link">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="burger-button_wrap">
+        <button type="button" class="page-header_burger" data-menu-open></button>
+        <button type="button" class="page-header_button" data-modal-open>
+          <span class="button-word">Buy now</span>
+        </button>
+      </div>
     </div>
   </div>
 </header>
