--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -3,8 +3,8 @@
   margin-left: auto;
   margin-right: 0;
   padding: 0;
-  width: 40px;
-  height: 40px;
+  width: 14px;
+  height: 14px;
   border: none;
   top: 0;
   right: 0;
@@ -18,59 +18,116 @@
   }
 }
 .menu-container {
-  background-color: #e17992;
-  padding-top: 48px;
-  padding-left: 40px;
-  padding-bottom: 48px;
-  @media screen and(min-width:768px) {
-    display: flex;
-    padding: 0;
-  }
-  @media screen and(max-width:767px) {
-    position: absolute;
+  @media screen and (max-width: 1279px) {
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100vw;
+    right: 0;
+    width: 250px;
     height: 100vh;
-    // z-index: 999;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    &.is-open {
-      display: block;
-    }
-    &.is-hidden {
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
-    }
+    background-color: #e17992;
+    padding: 0 34px;
+    padding-top: 60px;
+    z-index: 999;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
   }
-  @media screen and(min-width:1200px) {
-    display: contents;
+
+  @media screen and (min-width: 1280px) {
+    display: none;
   }
+  //   @media screen and(max-width:767px) {
+  //     // width: 100%;
+  //     display: flex;
+  //     flex-direction: column;
+  //     justify-content: space-between;
+  //     &.is-open {
+  //       display: block;
+  //     }
+  //     &.is-hidden {
+  //       opacity: 0;
+  //       visibility: hidden;
+  //       pointer-events: none;
+  //     }
+  //   }
+  //   @media screen and(min-width:1200px) {
+  //     display: contents;
+  //   }
 }
 .menu-button-close {
   position: absolute;
   margin-top: 10px;
   margin-right: 15px;
-  width: 40px;
-  height: 40px;
   top: 0;
   right: 0;
   border: none;
   padding: 0;
-  width: 40px;
-  height: 40px;
   border: none;
   background-color: transparent;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus,
   &:hover {
-    fill: #2196f3;
+    fill: #d41443;
   }
-  @media screen and(min-width:768px) {
+  @media screen and(min-width: 1280px) {
     display: none;
   }
 }
+
+.mob-menu__item {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 0.78;
+  margin-bottom: 23px;
+
+  & a {
+    color: #ffffff;
+  }
+}
+
+.mobile-buy-btn {
+  min-width: 160px;
+  height: 44px;
+  border: none;
+  border-radius: 22px;
+  background-color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  cursor: pointer;
+  color: var(--accent-color);
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
+
+// .page-header_button {
+//   display: none;
+//   min-width: 160px;
+//   height: 44px;
+//   border: none;
+//   border-radius: 22px;
+//   background-color: #fff;
+//   font-weight: bold;
+//   font-size: 16px;
+//   line-height: 1.31;
+//   cursor: pointer;
+//   color: var(--accent-color);
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     background-color: #ecebeb;
+//   }
+// }
