Removed class in mobile menu

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -4,7 +4,7 @@
       <use class="icon-cross" href="./images/sprite-con.svg#icon-close"></use>
     </svg>
   </button>
-  <button type="button" class="page-header_button mobile-buy-btn" data-modal-open>
+  <button type="button" class="mobile-buy-btn" data-modal-open>
     <span class="button-word">Buy now</span>
   </button>
   <ul>
