--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -6,6 +6,7 @@
   top: 0;
   transition: transform 250ms linear;
   z-index: 99;
+  overflow: scroll;
 
   &.is-hidden {
     opacity: 0;
@@ -45,6 +46,7 @@
 }
 
 .modal {
+  min-width: 100%;
   position: absolute;
   min-height: 581px;
   background-color: #e17992;
@@ -53,9 +55,14 @@
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
-  width: 450px;
 
+  overflow: scroll;
   z-index: 99999;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    min-width: 450px;
+  }
 
   @media screen and (min-width: 768px) {
     width: 528px;
