--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -36,24 +36,8 @@
   @media screen and (min-width: 1280px) {
     display: none;
   }
-  //   @media screen and(max-width:767px) {
-  //     // width: 100%;
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: space-between;
-  //     &.is-open {
-  //       display: block;
-  //     }
-  //     &.is-hidden {
-  //       opacity: 0;
-  //       visibility: hidden;
-  //       pointer-events: none;
-  //     }
-  //   }
-  //   @media screen and(min-width:1200px) {
-  //     display: contents;
-  //   }
 }
+
 .menu-button-close {
   position: absolute;
   margin-top: 10px;
@@ -65,6 +49,7 @@
   border: none;
   background-color: transparent;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &:focus,
   &:hover {
     fill: #d41443;
@@ -83,11 +68,16 @@
   & a {
     color: #ffffff;
   }
+
+  & a.current {
+    color: #d41443;
+  }
 }
 
 .mobile-buy-btn {
-  min-width: 160px;
+  width: 100%;
   height: 44px;
+  margin-bottom: 32px;
   border: none;
   border-radius: 22px;
   background-color: #fff;
@@ -96,6 +86,7 @@
   line-height: 1.31;
   cursor: pointer;
   color: var(--accent-color);
+
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
@@ -106,4 +97,8 @@
   &:focus {
     background-color: #ecebeb;
   }
+}
+
+.icon-cross {
+  fill: #ffffff;
 }
