Applied cursor pointer, fixed scroll in modal window

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -39,8 +39,8 @@
           </span></label
         >
       </div>
+      <!-- <img class="modal-img" src="./images/milk-mob-1.png" alt="" /> -->
       <button class="btn-modal" type="button">Buy now</button>
-      <img class="modal-img" src="./images/milk-mob-1.png" alt="" />
     </form>
   </div>
 </div>
