--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -3,6 +3,7 @@
   height: 14px;
   border: none;
   background-color: inherit;
+  cursor: pointer;
 
   display: flex;
   background-image: url(../../src/images/Burger.svg);
