--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -49,7 +49,8 @@
   border: none;
   background-color: transparent;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
   &:focus,
   &:hover {
     fill: #d41443;
@@ -63,10 +64,14 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 0.78;
-  margin-bottom: 23px;
+
+  &:not(:last-child) {
+    margin-bottom: 23px;
+  }
 
   & a {
     color: #ffffff;
+    cursor: pointer;
   }
 
   & a.current {
@@ -101,4 +106,9 @@
 
 .icon-cross {
   fill: #ffffff;
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
