--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -25,9 +25,9 @@
   border-radius: 22px;
   padding: 20px 37px 20px 37px;
   border: none;
-  position: absolute;
+  position: relative;
   left: 50%;
-  bottom: 10%;
+  top: 40px;
   transform: translate(-50%, -50%);
   width: 160px;
 
@@ -46,29 +46,25 @@
 }
 
 .modal {
-  min-width: 100%;
   position: absolute;
-  min-height: 581px;
-  background-color: #e17992;
-  border-radius: 22px;
-  left: 50%;
   top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
+
+  width: 450px;
+  height: 680px;
+  max-width: 100%;
+  max-height: 100%;
   padding: 40px;
+  // padding-bottom: 0;
 
-  overflow: scroll;
-  z-index: 99999;
+  background-color: #e17992;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 
-  @media screen and (min-width: 480px) {
-    width: 450px;
-    min-width: 450px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 528px;
-  }
   @media screen and (min-width: 1200px) {
-    width: 608px;
+    width: 528px;
   }
 }
 
@@ -201,6 +197,16 @@
   background-position: center;
 }
 
+// .ceckbox-text:after {
+//   content: '';
+//   width: 100%;
+//   height: 20px;
+//   background-image: url(../images/milk-mob-1.png);
+//   background-repeat: no-repeat;
+//   background-size: contain;
+//   background-position: center;
+// }
+
 .modal-form-text {
   display: flex;
   align-items: center;
@@ -215,25 +221,14 @@
   color: #ecebeb;
 }
 
-.modal-img {
-  width: 100%;
-}
+// .modal-img {
+//   width: 100%;
+//   // position: fixed;
+//   bottom: 20px;
+// }
 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
 }
