--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,10 +1,9 @@
 <div class="menu-container is-hidden" data-menu>
-  <!-- <button type="button" class="menu-button-close" data-menu-close>
+  <button type="button" class="menu-button-close" data-menu-close>
     <svg width="14" height="14">
       <use class="icon-cross" href="./images/sprite-con.svg#icon-close"></use>
     </svg>
-  </button> -->
-
+  </button>
   <button type="button" class="mobile-buy-btn" data-modal-open>
     <span class="button-word">Buy now</span>
   </button>
