--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,4 +1,4 @@
-<section class="how-its-made">
+<section class="how-its-made" id="how-made">
   <div class="container">
     <div class="how-its-made-main">
       <h2 class="how-its-made__first-title">TRADITION AND LOVE</h2>
