--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -8,10 +8,10 @@
     <span class="button-word">Buy now</span>
   </button>
   <ul>
-    <li class="mob-menu__item"><a href="" class="current">Home</a></li>
-    <li class="mob-menu__item"><a href="">About us</a></li>
-    <li class="mob-menu__item"><a href="">How it’s made?</a></li>
-    <li class="mob-menu__item"><a href="">Our products</a></li>
-    <li class="mob-menu__item"><a href="">Contact</a></li>
+    <li class="mob-menu__item"><a href="index.html" class="current">Home</a></li>
+    <li class="mob-menu__item"><a href="#about-us">About us</a></li>
+    <li class="mob-menu__item"><a href="#how-made">How it’s made?</a></li>
+    <li class="mob-menu__item"><a href="#products">Our products</a></li>
+    <li class="mob-menu__item"><a href="#contacts">Contact</a></li>
   </ul>
 </div>
