--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 
-<section class="products container">
+<section class="products container" id="products">
     <p class="product-subtitle"> 100% natural</p>
     <h2 class="product-title">products</h2>
 
