--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="about-us">
     <img class="reviews__img" src="./images/girl-1.png" alt="girl smile" width="85" height="85">
     <div class="reviews__text-wrap">
         <p class="reviews__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
