--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,13 +6,13 @@
       </a>
       <nav class="header-nav">
         <ul class="header-nav_list">
-          <li class="header-nav_item"><a href="" class="header-nav_link link current">Home</a></li>
-          <li class="header-nav_item"><a href="" class="header-nav_link link">About us</a></li>
+          <li class="header-nav_item"><a href="index.html" class="header-nav_link link current">Home</a></li>
+          <li class="header-nav_item"><a href="#about-us" class="header-nav_link link">About us</a></li>
           <li class="header-nav_item">
-            <a href="" class="header-nav_link link">How it’s made?</a>
+            <a href="#how-made" class="header-nav_link link">How it’s made?</a>
           </li>
-          <li class="header-nav_item"><a href="" class="header-nav_link link">Our products</a></li>
-          <li class="header-nav_item"><a href="" class="header-nav_link link">Contact</a></li>
+          <li class="header-nav_item"><a href="#products" class="header-nav_link link">Our products</a></li>
+          <li class="header-nav_item"><a href="#contacts" class="header-nav_link link">Contact</a></li>
         </ul>
       </nav>
       <div class="burger-button_wrap">
