--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -2,19 +2,20 @@
   <div class="container">
     <div class="how-its-made-main">
       <h2 class="how-its-made__first-title">TRADITION AND LOVE</h2>
-      <h1 class="how-its-made__second-title">HOW IT’S MADE?</h1>
+      <h2 class="how-its-made__second-title">HOW IT’S MADE?</h1>
       <div class="how-its-made-picture-and-text">
         <picture class="how-its-made__picture">
           <source
             srcset="./images/cows-desk-1.png 1x, ./images/cows-desk-2.png 2x"
             media="(min-width:1280px)"
+            alt=""
           />
           <source
             srcset="./images/cows-tab-1.png 1x, ./images/cows-tab-2.png 2x"
             media="(min-width:768px)"
           />
           <source srcset="./images/cows-mob-1.png 1x, ./images/cows-mob-2.png 2x" />
-          <img class="how-its-made__image" src="#" />
+          <img class="how-its-made__image" src="#" alt="" />
         </picture>
         <div class="how-its-made-right">
           <p class="how-its-made__first-text">
