--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -29,10 +29,15 @@
   left: 50%;
   top: 40px;
   transform: translate(-50%, -50%);
-  width: 160px;
+  fill: #c7133e;
+  &:hover,
+  &:focus {
+    fill: #ecebeb;
+  }
 
   @media screen and (min-width: 768px) {
     width: 240px;
+    font-size: 20px;
   }
 }
 
@@ -43,6 +48,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #ecebeb;
 }
 
 .modal {
@@ -50,7 +56,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
+  overflow: scroll;
   width: 450px;
   height: 680px;
   max-width: 100%;
@@ -61,7 +67,11 @@
   background-color: #e17992;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+  border-radius: 20px;
+  background-image: url(../images/milk-mob-2.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 55% 100%;
 
   @media screen and (min-width: 1200px) {
     width: 528px;
@@ -98,19 +108,26 @@
   margin-bottom: 20px;
   font-style: normal;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
   text-align: center;
   display: block;
   color: #ecebeb;
+
+  @media screen and (min-width: 768px) {
+    font-size: 25px;
+  }
 }
 
 .modal-form-lable {
-  font-size: 20px;
+  font-size: 17px;
   line-height: 14px;
   color: #ecebeb;
   margin-bottom: 15px;
   display: flex;
   justify-content: center;
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .modal-form-input {
@@ -215,10 +232,14 @@
 }
 
 .ceckbox-text {
-  font-size: 17px;
+  font-size: 12px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #ecebeb;
+
+  @media screen and (min-width: 768px) {
+    font-size: 17px;
+  }
 }
 
 // .modal-img {
@@ -231,4 +252,14 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.modal-btn-icon {
+  margin-left: 10px;
+}
+
+.btn-modal-word {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
