with label and script

--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,8 +1,8 @@
 <section class="how-its-made" id="how-made">
   <div class="container">
     <div class="how-its-made-main">
-      <h2 class="how-its-made__first-title">TRADITION AND LOVE</h2>
-      <h1 class="how-its-made__second-title">HOW IT’S MADE?</h1>
+      <label class="how-its-made__title-label" for="how-its-made-title">TRADITION AND LOVE</label>
+      <h1 class="how-its-made__title" id="how-its-made-title">HOW IT’S MADE?</h1>
       <div class="how-its-made-picture-and-text">
         <picture class="how-its-made__picture">
           <source
@@ -29,7 +29,7 @@
             </p>
             <p class="second-text__bottom">Aliquam erat volutpat. Aenean accumsan.</p>
           </div>
-          <button type="button" class="how-its-made__btn">
+          <button type="button" class="how-its-made__btn" data-modal-open>
             <span class="how-its-made__read-more">Read more</span>
             <svg width="7" height="10">
               <use href="./images/sprite-con.svg#icon-red"></use>
