--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,8 +4,8 @@
     <div class="hero-wrap">
       <div class="hero-title_box">
         <h1 class="hero_title">ice cream made with <span class="hero_word">passion </span></h1>
-        <a href="#products"><button type="button" class="products-button">  Products</button></a>
-        <a href="#how-made"> <button type="button" class="made-button">How it’s made?</button></a>
+        <button type="button" class="products-button"> <a href="#products" class="produts-button__text"> Products</a></button>
+        <button type="button" class="made-button">  <a href="#how-made" class="made-button__text">How it’s made?</a></button>
         <div class="hero-text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
