--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-box-text">
       <div class="footer-text-container">
         <p class="footer-text">homemade ice cream made</p>
-        <h1 class="footer-title">with passion</h1>
+        <p class="footer-title">with passion</p>
       </div>
       <div class="footer-box">
         <ul class="footer-list">
