--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -40,7 +40,7 @@
 }
 .footer-box-text {
   @media screen and (min-width: 768px) {
-    margin-bottom: 90px;
+    padding-bottom: 90px;
     display: flex;
     justify-content: space-between;
   }
