--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,21 @@
 <section class="reviews" id="about-us">
-    <img class="reviews__img" src="./images/girl-1.png" alt="girl smile" width="85" height="85">
-    <div class="reviews__text-wrap">
-        <p class="reviews__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-        congue. Lorem ipsum primis in nibh vel risus.</p>
-    </div>
-    <span class="reviews__city-name">Emily, Los Angeles</span>
+  <img class="reviews__img" src="./images/girl-1.png" alt="girl smile" width="85" height="85" />
+  <div class="reviews__text-wrap">
+    <p class="reviews__text">
+      Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+      nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+    </p>
+  </div>
+  <span class="reviews__city-name">Emily, Los Angeles</span>
+  <ul class="review-list">
+    <li class="review-item">
+      <img src="./images/reviews-house.png" alt="House" />
+    </li>
+    <li class="review-item">
+      <img src="./images/reviews-dot.png" alt="House" />
+    </li>
+    <li class="review-item">
+      <img src="./images/reviews-dot.png" alt="House" />
+    </li>
+  </ul>
 </section>
