--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -92,6 +92,7 @@
   font-size: 14px;
   line-height: 1.86;
   color: #000000;
+  margin-bottom: 35px;
   &::before {
     content: '';
     display: block;
@@ -102,18 +103,17 @@
     height: 4px;
     margin-bottom: 16px;
   }
-  &::after {
-    content: '';
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    background-image: url(../images/hr-dots.png);
-    width: 72px;
-    height: 12px;
-    margin-top: 30px;
+}
+.review-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  margin: 0 auto;
+}
 
-    @media screen and (min-width: 768px) {
-      margin-top: 35px;
-    }
+.review-item {
+  &:not(:last-child) {
+    margin-right: 18px;
   }
 }
