--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,7 +1,36 @@
+.container_gallery {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+  }
+}
 .gallery {
   background-image: linear-gradient(to bottom, #fff5f6 40%, #ffffff 40%);
   width: 100vw;
-  padding-bottom: 123px;
+  padding-top: 53px;
+  padding-bottom: 80px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 83px;
+    padding-bottom: 122px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 83px;
+  }
+}
+
+.gallery-picture {
+  margin: 0 auto;
 }
 
 .item {
