--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -63,6 +63,7 @@
   max-height: 100%;
   padding: 40px;
   // padding-bottom: 0;
+  overflow-y: scroll;
 
   background-color: #e17992;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
