--- a/src/sass/layout/_how-its-made.scss
+++ b/src/sass/layout/_how-its-made.scss
@@ -117,6 +117,8 @@
 }
 
 .how-its-made-right {
+  font-family: DM Sans;
+  text-align: left;
   margin-left: auto;
   margin-right: auto;
   max-width: 220px;
