--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -64,6 +64,7 @@
   padding: 40px;
   // padding-bottom: 0;
   overflow-y: scroll;
+  scrollbar-width: none;
 
   background-color: #e17992;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -77,6 +78,17 @@
   @media screen and (min-width: 1200px) {
     width: 528px;
   }
+}
+
+.modal {
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.modal::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
 .modal-form-field {
