Fixed validator errors

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="modal-form-field">
-        <label for="input-comment" class="modal-form-lable" id="input-comment">Comennt</label>
+        <label for="comment" class="modal-form-lable">Comennt</label>
         <textarea name="modal-comment" id="comment" placeholder="" class="modal-comment"></textarea>
       </div>
       <div class="modal-form-text">
