--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,5 @@
 <section class="reviews" id="about-us">
+  <h2 class="visually-hidden">Review</h2>
   <img class="reviews__img" src="./images/girl-1.png" alt="girl smile" width="85" height="85" />
   <div class="reviews__text-wrap">
     <p class="reviews__text">
