--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
 <section class="gallery">
   <div class="container_gallery">
+    <h2 class="visually-hidden">Gallery</h2>
     <picture>
       <source
         srcset="./images/home@gallery-desktop-1x.jpg 1x, ./images/home@gallery-desktop-2x.jpg 2x"
